[tool.poetry]
name = "adventofcode"
version = "1.2.0"
description = "This is a compilation of current and past solutions for advent of code utilizing python. It incorporates data structures and algorithms, design patterns, unit testing, continuous integration, and dependency management."
authors = ["David Welborn <dswelbor@asu.edu>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
